2009-09-23  Chris Toshok  <toshok@ximian.com>

	* RenderingEventArgs.cs: there's no reason to maintain
	a reference to the native peer in this class.  The fields are all
	read-only and can be initialized in the ctor.

	* ImageBrush.cs: remove all the autogenerated events.

	* CompositionTarget.cs: use the new event registration stuff.

	r: spouliot, andriea

2009-09-16  Larry Ewing  <lewing@novell.com>

	* MultiScaleTileSource.cs: move this property to managed.

	r: toshok

2009-09-14  Chris Toshok  <toshok@ximian.com>

	* ImageBrush.cs (InvokeImageFailed): we need to create the
	exceptionroutedeventargs from the calldata.

2009-09-03  Stephane Delcroix  <sdelcroix@novell.com>

	* DeepZoomImageTileSource.cs: use the same code path as the native
	ctors to set the sourceuri.

2009-08-27  Stephane Delcroix  <sdelcroix@novell.com>

	* MultiScaleTileSource.cs: those stuffs are now autogenerated

2009-08-13  Stephane Delcroix  <sdelcroix@novell.com>

	* multiScaleTileSource.cs : throw ArgumentException on negative ctor
	args. Partly fix drt 874.

2009-08-07  Andreia Gaita  <avidigal@novell.com>

	* MultiScaleTileSource.cs: Fix cast

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MediaStreamSource.cs: Fix parsing of audio extra data.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MediaStreamSource.cs: Update according to AudioStream API changes.

2009-07-15  Stephane Delcroix  <sdelcroix@novell.com>

	* MultiScaleTileSource.cs: call the native method for InvalidateTileLayer

2009-06-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DeepZoomImageTileSource.cs: Print fixme to console to speed up
	debugging.

2009-06-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ImageBrush.cs: Implement ImageFailed event propagation from
	unmanaged code.

2009-05-19  Stephane Delcroix  <sdelcroix@novell.com>

	* MultiScaleImageTileSource.cs: do not try to set the callback method
	for DeepZoomImageTileSources. Avoid a native call and a g_warning.
